feat: implemented identity and permission injection setup in golang
